# wl_stats_torch

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.sh  verify_installation.py
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs-md/: API.md  CI_CD_SETUP.md  CONTRIBUTING.md  DTYPE_CONSISTENCY_FIXES.md  EDGE_BIN_ISSUE.md  FFT_OPTIMIZATION.md  INSTALL.md  L1_NORM_ANALYSIS.md  PACKAGE_SETUP_COMPLETE.md  PACKAGE_SUMMARY.md  QUICKREF.md  QUICKSTART.md  REORGANIZATION.md  SIGNAL_TO_NOISE_FIX.md  STRUCTURE.md  TEST_FIXES.md
examples/: basic_usage.py  batch_processing.py  cfis_example.py
notebooks/: des_mock_demo.ipynb
tests/: __init__.py  conftest.py  test_peaks.py  test_starlet.py  test_statistics.py
wl_stats_torch/: __init__.py  peaks.py  starlet.py  statistics.py  visualization.py
