[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wl-stats-torch"
version = "0.1.0"
description = "GPU-accelerated weak lensing summary statistics with PyTorch"
readme = "README.md"
authors = [
    {name = "Andreas Tersenov", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["cosmology", "weak lensing", "wavelets", "statistics", "gpu", "pytorch"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wl-stats-torch"
Documentation = "https://github.com/yourusername/wl-stats-torch"
Repository = "https://github.com/yourusername/wl-stats-torch"

[tool.setuptools]
packages = ["wl_stats_torch"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=wl_stats_torch --cov-report=html --cov-report=term"
